--- a/package.json
+++ b/package.json
@@ -3,7 +3,14 @@
   "version": "0.11.1",
   "description": "A toolkit for building WYSIWYG editors with Mobiledoc",
   "repository": "https://github.com/bustle/mobiledoc-kit",
-  "scripts": {},
+  "scripts": {
+    "commit": "git-cz"
+  },
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
+  },
   "keywords": [
     "html",
     "json",
@@ -22,5 +29,8 @@
     "mobiledoc-dom-renderer": "0.6.5",
     "mobiledoc-text-renderer": "0.3.2"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "commitizen": "3.0.5",
+    "cz-conventional-changelog": "2.1.0"
+  }
 }
