--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A toolkit for building WYSIWYG editors with Mobiledoc",
   "repository": "https://github.com/bustle/mobiledoc-kit",
   "scripts": {
-    "commit": "git-cz"
+    "commit": "git-cz",
+    "lint": "eslint --ext .js --ignore-path .gitignore --fix ."
   },
   "config": {
     "commitizen": {
@@ -30,7 +31,14 @@
     "mobiledoc-text-renderer": "0.3.2"
   },
   "devDependencies": {
+    "babel-eslint": "10.0.1",
     "commitizen": "3.0.5",
-    "cz-conventional-changelog": "2.1.0"
+    "cz-conventional-changelog": "2.1.0",
+    "eslint": "5.10.0",
+    "eslint-config-standard": "12.0.0",
+    "eslint-plugin-import": "2.14.0",
+    "eslint-plugin-node": "8.0.0",
+    "eslint-plugin-promise": "4.0.1",
+    "eslint-plugin-standard": "4.0.0"
   }
 }
